syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";

option go_package = "./pkg/pb/auth";

service Admin {
    rpc AdminSignup(AdminSignupRequest) returns (AdminSignupResponse) {};
    rpc AdminLogin(AdminLoginInRequest) returns (AdminLoginResponse) {};
}

message AdminSignupRequest {
    string firstname = 1;
    string lastname = 2;
    string email = 3;
    string password = 4;
}

message AdminSignupResponse {
    int64 status = 1;
    AdminDetails admin_details = 2;
    string token = 3;
    string error = 4;
}

message AdminDetails {
    uint64 id = 1;
    string firstname = 2;
    string lastname = 3;
    string email = 4;
}

message AdminLoginInRequest {
    string email = 1;
    string password = 2;
}

message AdminLoginResponse {
    int64 status = 1;
    AdminDetails admin_details = 2;
    string token = 3;
    string error = 4;
}

service Employer {
    rpc EmployerSignup(EmployerSignupRequest) returns (EmployerSignupResponse) {};
    rpc EmployerLogin(EmployerLoginInRequest) returns (EmployerLoginResponse) {};
    rpc PostJobOpening(PostJobOpeningRequest) returns (PostJobOpeningResponse) {};
    rpc GetCompanyDetails(GetCompanyDetailsRequest) returns (EmployerDetailsResponse) {};
    rpc UpdateCompany(UpdateCompanyRequest) returns (UpdateCompanyResponse) {};
}

message UpdateCompanyRequest {
    string company_name = 1;
    string industry = 2;
    int32 company_size = 3;
    string website = 4;
    string headquarters_address = 5;
    string about_company = 6;
    string contact_email = 7;
    uint64 contact_phone_number = 8;
    int32 id = 9;
}

message UpdateCompanyResponse {
    uint64 id = 1;
    string company_name = 2;
    string industry = 3;
    int32 company_size = 4;
    string website = 5;
    string headquarters_address = 6;
    string about_company = 7;
    string contact_email = 8;
    uint64 contact_phone_number = 9;
}

message EmployerSignupRequest {
    string company_name = 1;
    string industry = 2;
    int32 company_size = 3;
    string website = 4;
    string headquarters_address = 5;
    string about_company = 6;
    string contact_email = 7;
    uint64 contact_phone_number = 8;
    string password = 9;
}

message EmployerSignupResponse {
    int64 status = 1;
    EmployerDetails employer_details = 2;
    string token = 3;
    string error = 4;
}

message EmployerDetails {
    uint64 id = 1;
    string company_name = 2;
    string industry = 3;
    int32 company_size = 4;
    string website = 5;
    string headquarters_address = 6;
    string about_company = 7;
    string contact_email = 8;
    uint64 contact_phone_number = 9;
}

message EmployerLoginInRequest {
    string email = 1;
    string password = 2;
}

message EmployerLoginResponse {
    int64 status = 1;
    EmployerDetails employer_details = 2;
    string token = 3;
    string error = 4;
}

message PostJobOpeningRequest {
    string title = 1;
    string description = 2;
    string requirements = 3;
    string company_name = 4;
    string location = 5;
    string employment_type = 6;
    string salary_range = 7;
    repeated string skills_required = 8;
    string experience_level = 9;
    string education_level = 10;
    google.protobuf.Timestamp application_deadline = 11;
}

message PostJobOpeningResponse {
    int64 status = 1;
    JobOpening job_opening = 2;
    string error = 3;
}

message JobOpening {
    uint64 id = 1;
    string title = 2;
    string description = 3;
    string requirements = 4;
    google.protobuf.Timestamp posted_on = 5;
    int32 total_applications = 6;
    string company_name = 7;
    string location = 8;
    string employment_type = 9;
    string salary_range = 10;
    repeated string skills_required = 11;
    string experience_level = 12;
    string education_level = 13;
    google.protobuf.Timestamp application_deadline = 14;
}


message GetCompanyDetailsRequest {
    int32 id = 1;
}

message EmployerDetailsResponse {
    EmployerDetails employer_details = 1;
}


service JobSeeker {
    rpc JobSeekerSignup(JobSeekerSignupRequest) returns (JobSeekerSignupResponse) {};
    rpc JobSeekerLogin(JobSeekerLoginRequest) returns (JobSeekerLoginResponse) {};
}

message JobSeekerSignupRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    string phone_number = 5;
    string date_of_birth = 6;
    string gender = 7;
}

message JobSeekerSignupResponse {
    int64 status = 1;
    JobSeekerDetails job_seeker_details = 2;
    string token = 3;
}

message JobSeekerDetails {
    uint64 id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string phone_number = 5;
    string date_of_birth = 6;
    string gender = 7;
}

message JobSeekerLoginRequest {
    string email = 1;
    string password = 2;
}

message JobSeekerLoginResponse {
    int64 status = 1;
    JobSeekerDetails job_seeker_details = 2;
    string token = 3;
}
