syntax = "proto3";

package job;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "./pkg/pb/job";

// Service definition for Job service
service Job {
    rpc PostJob(JobOpeningRequest) returns (JobOpeningResponse) {};
    rpc GetAllJobs(GetAllJobsRequest) returns (GetAllJobsResponse) {};
    rpc GetAJob(GetAJobRequest) returns (JobOpeningResponse) {};
    rpc DeleteAJob(DeleteAJobRequest) returns (google.protobuf.Empty);
    rpc UpdateAJob(UpdateAJobRequest) returns (UpdateAJobResponse) {};
    rpc JobSeekerGetAllJobs(JobSeekerGetAllJobsRequest) returns (JobSeekerGetAllJobsResponse) {};
    rpc GetJobDetails(GetJobDetailsRequest) returns (GetJobDetailsResponse) {};
    rpc ApplyJob(ApplyJobRequest) returns (ApplyJobResponse){};
    rpc GetJobApplications(GetJobApplicationsRequest) returns (GetJobApplicationsResponse){};
    rpc SaveJobs(SaveJobRequest) returns (SaveJobResponse){};
    rpc DeleteSavedJob(DeleteSavedJobRequest) returns (DeleteSavedJobResponse){};
    rpc GetSavedJobs(GetSavedJobsRequest) returns (GetSavedJobsResponse) {};
    rpc ScheduleInterview(ScheduleInterviewRequest) returns (ScheduleInterviewResponse) {};
    rpc GetInterview(GetInterviewRequest) returns (GetInterviewsResponse) {};
    rpc GetAnApplicant(GetAnApplicantRequest) returns (GetAnApplicantResponse);
} 

message GetAnApplicantRequest {
    int32 job_id = 1;
    int32 employer_id = 2;
    int32 jobseeker_id = 3;
}

message GetAnApplicantResponse {
    uint64 id = 1;
    int32 job_id = 2;
    int32 employer_id = 3;
    int32 jobseeker_id = 4;
    string status = 5;
    google.protobuf.Timestamp applied_time = 6;
}

message GetInterviewRequest {
    string job_id = 1;
    int32 employer_id = 2;
}

message GetInterviewsResponse {
    uint64 id = 1;
    uint64 job_id = 2;
    uint64 jobseeker_id = 3;
    int32 employer_id = 4;
    google.protobuf.Timestamp scheduled_time = 5;
    string mode = 6;
    string link = 7;
    string status = 8;
}



message ScheduleInterviewRequest {
    string job_id = 1;
    string jobseeker_id = 2;
    int32 employer_id = 3;
    string scheduled_time = 4;
    string mode = 5;
    string link = 6;
    string status = 7;
}

message ScheduleInterviewResponse {
    string id = 1;
    string job_id = 2;
    string jobseeker_id = 3;
    int32 employer_id = 4;
    string scheduled_time = 5;
    string mode = 6;
    string link = 7;
    string status = 8;
}

message GetSavedJobsRequest {
    string user_id = 1;
}

message GetSavedJobsResponse {
    repeated SavedJobResponse saved_jobs = 1;
}

message SavedJobResponse {
    string id = 1;
    string job_id = 2;
    string user_id = 3;
}

message DeleteSavedJobRequest {
    string user_id = 1;
    string job_id = 2;
}

message DeleteSavedJobResponse {
    string message = 1;
}

message SaveJobRequest {
    string job_id = 1;
    string user_id = 2;
}

message SaveJobResponse {
    string id = 1;
    string job_id = 2;
    string user_id = 3;
    string message = 4;
}

message GetJobApplicationsRequest {
    string employer_id = 1;
}

message GetJobApplicationsResponse{
    repeated JobApplication job_applications = 1;
}

message JobApplication {
    string id = 1;
    string job_id = 2;
    string job_seeker_id = 3;
    string resume = 4;
    string cover_letter = 5;
}

message ApplyJobRequest {
    int64 job_id = 1;
    int64 jobseeker_id = 2;
    string cover_letter = 3;
    bytes resume_data = 4;
    string resume_url = 5;
}

message ApplyJobResponse {
    int64 id = 1;
    int64 job_id = 2;
    int64 jobseeker_id = 3;
    string cover_letter = 4;
    bytes resume_data = 5;
    string resume_url = 6;
}

message GetJobDetailsRequest {
    int32 jobId = 1;
}

message GetJobDetailsResponse {
    uint64 id = 1;  // Add ID field
    string title = 2;
    string description = 3;
    string requirements = 4;
    int32 employer_id = 5;
    string location = 6;
    string employment_type = 7;
    string salary = 8;
    string skills_required = 9;  // Change to repeated string
    string experience_level = 10;
    string education_level = 11;
    google.protobuf.Timestamp application_deadline = 12;
    google.protobuf.Timestamp starting_date = 13;  // Add StartingDate field
    google.protobuf.Timestamp posted_on = 14;  // Add PostedOn field
    string company_name = 15;  // Add CompanyName field
    string year_of_experience = 16;  // Add YearOfExperience field
    string opportunities = 17;  // Add Opportunities field
    string candidates_hired = 18;  // Add CandidatesHired field
    string type = 19;
}

message JobSeekerGetAllJobsRequest {
    string title = 1;
}

message JobSeekerGetAllJobsResponse {
    repeated JSGetAllJobsRespons jobs = 1;
}

message JSGetAllJobsRespons {
    uint64 id = 1;
    string title = 2;
}


// Request message for posting a job opening
message JobOpeningRequest {
    string title = 1;
    string description = 2;
    string requirements = 3;
    int32 employer_id = 4;
    string location = 5;
    string employment_type = 6;
    string salary = 7;
    string skills_required = 8;  // Changed to repeated string
    string experience_level = 9;
    string education_level = 10;
    google.protobuf.Timestamp application_deadline = 11;
    string company_name = 12;
    string year_of_experience = 13;
    string opportunities = 14;
    google.protobuf.Timestamp starting_date = 15;
    string type = 16;
}

// Response message for posting a job opening
message JobOpeningResponse {
    uint64 id = 1;
    string title = 2;
    string description = 3;
    string requirements = 4;
    google.protobuf.Timestamp posted_on = 5;
    int32 employer_id = 6;
    string location = 7;
    string employment_type = 8;
    string salary = 9;
    string skills_required = 10;  // Changed to repeated string
    string experience_level = 11;
    string education_level = 12;
    google.protobuf.Timestamp application_deadline = 13;
    string company_name = 14;
    string year_of_experience = 15;
    string opportunities = 16;
    google.protobuf.Timestamp starting_date = 17;
    string candidates_hired = 18;
    string type = 19;
}


message GetAllJobsRequest {
    int32 employerIDInt = 1;
}

message GetAllJobsResponse {
    repeated JobOpeningResponse jobs = 1;
}

message GetAJobRequest {
    int32 employerIDInt = 1;
    int32 jobId = 2;
}

message DeleteAJobRequest {
    int32 employerIDInt = 1;
    int32 jobId = 2;
}

message UpdateAJobRequest {
    int32 jobId = 1;
    string title = 2;
    string description = 3;
    string requirements = 4;
    string location = 5;
    string employment_type = 6;
    string salary = 7;
    string skills_required = 8;  // Changed to repeated string
    string experience_level = 9;
    string education_level = 10;
    google.protobuf.Timestamp application_deadline = 11;
    string company_name = 12;
    string year_of_experience = 13;
    string opportunities = 14;
    google.protobuf.Timestamp starting_date = 15;
    int32 employer_id = 16;  // Changed to last field to avoid conflict with jobId
    string type = 17;
}

message UpdateAJobResponse {
    uint64 id = 1;
    string title = 2;
    string description = 3;
    string requirements = 4;
    google.protobuf.Timestamp posted_on = 5;
    int32 employer_id = 6;
    string location = 7;
    string employment_type = 8;
    string salary = 9;
    string skills_required = 10;  
    string experience_level = 11;
    string education_level = 12;
    google.protobuf.Timestamp application_deadline = 13;
    string company_name = 14;
    string year_of_experience = 15;
    string opportunities = 16;
    string candidates_hired = 17;
    google.protobuf.Timestamp starting_date = 18;
     string type = 19;
}